[gd_scene load_steps=3 format=3 uid="uid://bwa8yb7agcv8m"]

[ext_resource type="Script" path="res://scripts/bullet/bullet.gd" id="1_6qadl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2m7u"]

[node name="Bullet" type="Node2D" node_paths=PackedStringArray("sprite", "col_shape", "effect_col_shape")]
script = ExtResource("1_6qadl")
sprite = NodePath("Sprite2D")
col_shape = NodePath("HitArea/CollisionShape2D")
effect_col_shape = NodePath("EffectArea/CollisionShape2D")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, -3)

[node name="EffectArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource("CircleShape2D_p2m7u")

[connection signal="area_entered" from="HitArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="EffectArea" to="." method="_on_effect_area_entered"]
[connection signal="area_exited" from="EffectArea" to="." method="_on_effect_area_exited"]
